feat(vaadin-template-renderer): support grid templates

--- a/packages/vaadin-template-renderer/package.json
+++ b/packages/vaadin-template-renderer/package.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "@esm-bundle/chai": "^4.1.5",
+    "@vaadin/vaadin-grid": "^21.0.0-alpha0",
     "@vaadin/testing-helpers": "^0.2.1"
   },
   "publishConfig": {
